[package]
name = "cell-gingembre"
version = "0.6.1"
edition = "2024"
rust-version = "1.91"
description = "Template rendering cell for dodeca using gingembre"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-gingembre"
path = "src/main.rs"

[dependencies]
cell-gingembre-proto = { path = "../cell-gingembre-proto" }
cell-lifecycle-proto = { path = "../cell-lifecycle-proto" }
gingembre = { path = "../../crates/gingembre" }
roam.workspace = true
roam-shm.workspace = true
roam-tracing.workspace = true
tokio.workspace = true
facet-value.workspace = true
futures.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
