[package]
autobins = false
name = "cell-html-diff"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_html_diff"
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
cell-html-diff-proto = { path = "../cell-html-diff-proto" }
dodeca-protocol = { path = "../../crates/dodeca-protocol" }
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime" }
tracing.workspace = true
hotmeal.workspace = true
