[package]
autobins = false
name = "cell-html-diff"
version = "0.0.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_html_diff"
crate-type = ["rlib"]
path = "src/main.rs"

[dependencies]
cell-html-diff-proto = { path = "../cell-html-diff-proto" }
facet-postcard.workspace = true
tracing.workspace = true
hotmeal.workspace = true
