[package]
name = "cell-html-proto"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
dodeca-protocol = { path = "../../crates/dodeca-protocol" }
facet.workspace = true
rapace.workspace = true
