[package]
autobins = false
name = "cell-html"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_html"
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
cell-host-proto = { path = "../cell-host-proto" }
cell-html-proto = { path = "../cell-html-proto" }
color-eyre.workspace = true
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime" }
hotmeal.workspace = true
html-escape.workspace = true
tracing.workspace = true
