[package]
autobins = false
name = "cell-html"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_html"
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[features]
default = ["dynamic-cell"]
dynamic-cell = ["dep:cell-host-proto", "dep:dodeca-cell-runtime"]

[dependencies]
cell-host-proto = { path = "../cell-host-proto", optional = true }
cell-html-proto = { path = "../cell-html-proto" }
color-eyre.workspace = true
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime", optional = true }
hotmeal.workspace = true
html-escape.workspace = true
tracing.workspace = true
