[package]
autobins = false
name = "cell-http"
version = "0.6.1"
edition = "2024"
rust-version = "1.91"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_http"
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
axum.workspace = true
cell-host-proto = { path = "../cell-host-proto" }
cell-http-proto = { path = "../cell-http-proto" }
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime" }
dodeca-protocol = { path = "../../crates/dodeca-protocol" }
eyre.workspace = true
futures-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
vox.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
