[package]
autobins = false
name = "cell-image"
version = "0.0.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_image"
crate-type = ["rlib"]
path = "src/main.rs"

[dependencies]
base64.workspace = true
cell-image-proto = { path = "../cell-image-proto" }
image.workspace = true
thumbhash.workspace = true
