[package]
name = "cell-js"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-js"
path = "src/main.rs"

[dependencies]
cell-js-proto = { path = "../cell-js-proto" }
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime" }
oxc.workspace = true
