[package]
autobins = false
name = "cell-js"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_js"
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
cell-js-proto = { path = "../cell-js-proto" }
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime" }
oxc.workspace = true
