[package]
name = "cell-jxl"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
cell-jxl-proto = { path = "../cell-jxl-proto" }
jpegxl-rs.workspace = true
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime" }
