[package]
autobins = false
name = "cell-jxl"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_jxl"
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[features]
default = ["dynamic-cell"]
dynamic-cell = ["dep:dodeca-cell-runtime"]

[dependencies]
cell-jxl-proto = { path = "../cell-jxl-proto" }
jpegxl-rs.workspace = true
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime", optional = true }
