[package]
autobins = false
name = "cell-linkcheck"
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
description = "External link checking plugin for dodeca"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_linkcheck"
crate-type = ["rlib"]
path = "src/main.rs"

[dependencies]
cell-linkcheck-proto = { path = "../cell-linkcheck-proto" }
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
