[package]
name = "cell-markdown-proto"
version = "0.0.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
facet-value.workspace = true

[dev-dependencies]
facet-postcard.workspace = true
