[package]
autobins = false
name = "cell-markdown"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_markdown"
crate-type = ["rlib"]
path = "src/main.rs"

[dependencies]
cell-markdown-proto = { path = "../cell-markdown-proto" }
marq = { version = "4.0.1", features = [
  "aasvg",
  "highlight",
  "pikru",
] }
tracing.workspace = true
