[package]
name = "cell-mermaid"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-mermaid"
path = "src/main.rs"

[dependencies]
cell-mermaid-proto = { path = "../cell-mermaid-proto" }
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime" }
mermaid-rs-renderer = "0.1"
