[package]
autobins = false
name = "cell-minify"
version = "0.0.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_minify"
crate-type = ["rlib"]
path = "src/main.rs"

[dependencies]
cell-minify-proto = { path = "../cell-minify-proto" }
