[package]
name = "cell-sass"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
cell-sass-proto = { path = "../cell-sass-proto" }
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime" }
grass.workspace = true
