[package]
autobins = false
name = "cell-sass"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_sass"
crate-type = ["rlib"]
path = "src/main.rs"

[dependencies]
cell-sass-proto = { path = "../cell-sass-proto" }
grass.workspace = true
